--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         with:
           junit_files: "**/build/test-results/test/TEST-*.xml"
+
       - name: docker-build-push
         uses: nais/docker-build-push@v0
         id: docker-build-push
@@ -36,32 +37,22 @@ jobs:
           docker_context: mediator # optional, default .
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ vars.NAIS_MANAGEMENT_PROJECT_ID }}
-      - name: Archive NAIS yaml
-        if: github.ref == 'refs/heads/main'
-        uses: actions/upload-artifact@v3
-        with:
-          name: nais-yaml
-          path: mediator/nais
+
     outputs:
       image: ${{ steps.docker-build-push.outputs.image }}
 
   deploy-dev:
     needs: [ build ]
-    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch NAIS yaml
-        uses: actions/download-artifact@v3
-        with:
-          name: nais-yaml
-          path: .nais
+      - uses: actions/checkout@v3
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: .nais/nais.yaml
+          RESOURCE: ./mediator/.nais/nais.yaml
           VAR: image=${{ needs.build.outputs.image }}
-          VARS: .nais/dev/vars.yaml
+          VARS: ./mediator/.nais/dev/vars.yaml
           PRINT_PAYLOAD: true
 
   deploy-prod:
@@ -69,16 +60,12 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch NAIS yaml
-        uses: actions/download-artifact@v3
-        with:
-          name: nais-yaml
-          path: .nais
+      - uses: actions/checkout@v3
       - uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: .nais/nais.yaml
+          RESOURCE: ./mediator/.nais/nais.yaml
           VAR: image=${{ needs.build.outputs.image }}
-          VARS: .nais/prod/vars.yaml
+          VARS: ./mediator/.nais/prod/vars.yaml
           PRINT_PAYLOAD: true
