--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,16 @@
 name: Build and deploy
 on: [ push ]
 
+permissions:
+  id-token: "write"
+  contents: "read"
+
 jobs:
   build:
     name: Build and publish Docker image
     runs-on: ubuntu-latest
     permissions:
       checks: "write"
-      contents: "read"
-      id-token: "write"
       issues: write
       pull-requests: write
     steps:
@@ -32,7 +34,6 @@ jobs:
         id: docker-build-push
         with:
           team: teamdagpenger
-          push_image: true # optional, default true
           dockerfile: mediator/Dockerfile # optional, default Dockerfile
           docker_context: mediator # optional, default .
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
