--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       checks: "write"
-      issues: write
-      pull-requests: write
+      id-token: "write"
+      pull-requests: "write"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -50,7 +50,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
           RESOURCE: ./mediator/.nais/nais.yaml
           VAR: image=${{ needs.build.outputs.image }}
@@ -65,7 +64,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
           RESOURCE: ./mediator/.nais/nais.yaml
           VAR: image=${{ needs.build.outputs.image }}
