--- a/mediator/Dockerfile
+++ b/mediator/Dockerfile
@@ -1,28 +1,7 @@
-FROM eclipse-temurin:21 as jre-build
+FROM gcr.io/distroless/java21
 
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
+ENV LANG='nb_NO.UTF-8' LANGUAGE='nb_NO:nb' LC_ALL='nb:NO.UTF-8' TZ="Europe/Oslo"
 
-# cprof
-FROM debian:buster-slim as cprof
-RUN apt-get update && apt-get install -y wget && rm -rf /var/lib/apt/lists/*
+COPY build/install/*/lib /app/lib
 
-# Runtime
-FROM debian:buster-slim
-
-ENV TZ="Europe/Oslo"
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-
-COPY --from=jre-build /javaruntime $JAVA_HOME
-
-COPY build/install/* /
-
-USER nobody
-CMD ["mediator"]
+ENTRYPOINT ["java", "-cp", "/app/lib/*", "no.nav.dagpenger.quiz.mediator.MainKt"]
